--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,106 +1,73 @@
-﻿@*@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @using ServiceWorkerWebsite.Areas.Identity.Data
-
 @inject SignInManager<ServiceWorkerWebsiteUser> SignInManager
 @inject UserManager<ServiceWorkerWebsiteUser> UserManager
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>
-*@
-
- @using Microsoft.AspNetCore.Identity
-@using ServiceWorkerWebsite.Areas.Identity.Data
-
-@inject SignInManager<ServiceWorkerWebsiteUser> SignInManager
-@inject UserManager<ServiceWorkerWebsiteUser> UserManager
-
-<body>
-
-
-    <ul class="navbar-nav">
-
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+       data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-user"></i>
         @if (SignInManager.IsSignedIn(User))
         {
-            <li class="nav-item dropdown">
-                <a id="manage" class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Hello @UserManager.GetUserName(User)!
-                </a>
-                @if ((User.IsInRole("Worker")) || (User.IsInRole("Admin")))
-                {
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Dashboard</a>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Business">Business</a>
-                        </li>
-                        <li>
-                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                <button id="logout" type="submit" class="dropdown-item">Logout</button>
-                            </form>
-                        </li>
-                    </ul>
-                }
-                else
-                {
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
-                            <a class="dropdown-item" asp-controller="Bookings" asp-action="Index">Booking History</a>
-
-                        </li>
-                        <li>
-                            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                <button id="logout" type="submit" class="dropdown-item">Logout</button>
-                            </form>
-                        </li>
-                    </ul>
-                }
-                @* <ul class="dropdown-menu">
-                    <li>
-                        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
-                    </li>
-                    <li>
-                        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                            <button id="logout" type="submit" class="dropdown-item">Logout</button>
-                        </form>
-                    </li>
-                </ul> *@
+            <span>@UserManager.GetUserName(User)</span>
+        }
+        else
+        {
+            <span>Account</span>
+        }
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end">
+        @if (SignInManager.IsSignedIn(User))
+        {
+            @if (User.IsInRole("Worker"))
+            {
+                <li>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">
+                        <i class="fas fa-user-circle"></i> Dashboard
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Business">
+                        <i class="fas fa-briefcase"></i> Business
+                    </a>
+                </li>
+            }
+            else
+            {
+                <li>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">
+                        <i class="fas fa-user-circle"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-controller="Bookings" asp-action="Index">
+                        <i class="fas fa-history"></i> Booking History
+                    </a>
+                </li>
+            }
+            <li><hr class="dropdown-divider"></li>
+            <li>
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
+                      asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="dropdown-item">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </button>
+                </form>
             </li>
         }
         else
         {
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Account
+            <li>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">
+                    <i class="fas fa-sign-in-alt"></i> Login
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li>
-                        <a class="dropdown-item" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-                    </li>
-                </ul>
+            </li>
+            <li>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">
+                    <i class="fas fa-user-plus"></i> Register
+                </a>
             </li>
         }
     </ul>
-</body>
+</li>
+
